Wed Mar 10 20:34:07 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * tests/Minimum/Receiver/Receiver_exec.h:
        * tests/Minimum/Receiver/Receiver_exec.cpp:
        * tests/Minimum/Sender/Sender_exec.h:
        * tests/Minimum/Sender/Sender_exec.cpp:

          Minor code cleanup.

Wed Mar 10 14:33:00 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Properties.idl:
        * DAnCE/NodeApplication/NodeApplication_Impl.h:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
        * DAnCE/tests/CIAO/CommandlinePassage/Component.cdp:

          Adding logic allowing explicitly deployed components.  As a
          consequence, properties attached to components will no longer be
          passed into their associated component servers.  These
          properties must now be associated with a component server that
          is in a same process locality constraint the component.

Wed Mar 10 13:24:23 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/Components/Progressive.idl:
        * DAnCE/tests/CIAO/Components/Progressive.mpc:
        * DAnCE/tests/CIAO/Progressive_Deployments:
        * DAnCE/tests/CIAO/Progressive_Deployments/NodeManagerMap.dat:
        * DAnCE/tests/CIAO/Progressive_Deployments/Plan_A.cdp:
        * DAnCE/tests/CIAO/Progressive_Deployments/Plan_B.cdp:
        * DAnCE/tests/CIAO/Progressive_Deployments/Plan_C.cdp:
        * DAnCE/tests/CIAO/Progressive_Deployments/run_test.pl:

          Progressive deployment example.

Wed Mar 10 14:26:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_Array/VT_Array_Connector.idl:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_Seq/VT_Seq_Connector.idl:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_String/VT_String_Connector.idl: